--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <main></main>
-    <script src="./build/main.js"></script>
+    <script src="./dist/main.js"></script>
     <script>
       Elm.Main.init({
         node: document.querySelector("main"),
