--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script>
       Elm.Main.init({
         node: document.querySelector("main"),
+        flags: { language: navigator.language },
       });
     </script>
   </body>
