Check audio, pass in sample rate

--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
 
-  <body>
-    <main></main>
-    <script src="./dist/main.js"></script>
-    <script src="./src/elm-audio.js"></script>
-    <script>
-      const app = Elm.Main.init({
-        node: document.querySelector("main"),
-        flags: {
-          language: navigator.language,
-          now: new Date().getTime(),
-        },
-      });
-      startAudio(app);
-    </script>
-  </body>
+    <body>
+        <main></main>
+        <script src="./dist/main.js"></script>
+        <script src="./src/elm-audio.js"></script>
+        <script>
+            const hasAudio = !!(
+                window.AudioContext ||
+                window.webkitAudioContext ||
+                false
+            );
+            const app = Elm.Main.init({
+                node: document.querySelector("main"),
+                flags: {
+                    language: navigator.language,
+                    now: new Date().getTime(),
+                    hasAudio: hasAudio,
+                    sampleRate: hasAudio ? new AudioContext().sampleRate : -1,
+                },
+            });
+            startAudio(app);
+        </script>
+    </body>
 </html>
